@startuml domain

skinparam linetype ortho
'========================================================
rectangle #464D77{
class Robot << Root >> << Entity >>
class Drone  << Entity >>
class MobileRobot  << Entity >>

class Code  << (v,orange) ValueObject >> << unique >>
class Nickname  << (v,#A4C2E5) ValueObject >>
class OperationStatus  << (v,#A4C2E5) ValueObject >>
class SerialNumber  << (v,#A4C2E5) ValueObject >>
}
'========================================================
rectangle #96A377{
class RobotType << Root >> << Entity >>
class AvailableTask  << (v,#A4C2E5) ValueObject >>
class RobotModel  << (v,#A4C2E5) ValueObject >>
class RobotBrand  << (v,#A4C2E5) ValueObject >>
class RobotTypeId << (v,orange) ValueObject >> << unique >>
}

'========================================================

Robot <|-u- MobileRobot
Robot <|-u- Drone
Robot "1"-l->"1" Code
Robot "*"-->"1" RobotType
Robot "*"-d->"1" OperationStatus
Robot "1"-->"1" Nickname
Robot "1"-->"1" SerialNumber

RobotType "*"-->"1" RobotModel
RobotType "*"-->"1" RobotBrand
RobotType "*"-->"*" AvailableTask
RobotType "1"-->"1" RobotTypeId

@enduml
